# Omukk-task

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: ffce71fc567e_initial_migrations.py
app/: database.py  models.py  redis.py  schemas.py  security.py  settings.py
app/repositories/: auth.py  post.py
app/routers/: auth.py  post.py
